sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: ')' expected but '}' found.
} while( j>0 && getValeur(j-1)<v  }
                                  ^